2009-12-11  Plato Wu  <gtalk000@gmail.com>

	* example/clbuild-repos.lisp: update example.

	* launchpad.lisp (http-request-for-launchpad): A wrapper for
	http-request, it provide eror handler and decode json for body.
	(open-a-bug): it return the bug id now.

2009-12-09  Plato Wu  <gtalk000@gmail.com>

	* launchpad.lisp (get-a-bug): New it.
	(add-a-comment): New it.

2009-12-07  Plato Wu  <gtalk000@gmail.com>

	* doc/index.html (href): Add a document created by my fork in documentation-template.

2009-11-28  Plato Wu  <standin-000@tianya.cn>

	* launchpad.lisp (update-a-bug): add update a bug function.

2009-11-27  Plato Wu  <standin-000@tianya.cn>

	* oauth.lisp (get-token-and-login): save authentication tokens in
	~/.launchpad and can reuse it in future.

2009-11-20  Plato Wu  <standin-000@tianya.cn>

	* A rough version, it includes a example which can get all clbuild
	repository urls in clbuild-repos and add new clbuild repository url.
	More function require my patch for drakma is approved.
