@@ -4,15 +4,15 @@
 
 (defparameter bug-id 1)
 
-(launchpad:get-token-and-login project)
+(launchpad:login project)
 
 (launchpad:get-all-bugs project)
 
-(setf bug-id (launchpad:open-a-bug project "test" "just testing"))
+(setf bug-id (launchpad:open-bug project "test" "just testing"))
 
-(launchpad:update-a-bug bug-id :title "modify test" :description "modify just testing")
+(launchpad:update-bug bug-id :title "modify test" :description "modify just testing")
 
-(launchpad:get-a-bug bug-id)
+(launchpad:get-bug bug-id)
 
-(launchpad:add-a-comment 483637 "test adding a comment")
+(launchpad:add-comment 483637 "test adding a comment")
 
