@@ -1,5 +1,5 @@
 (defpackage :launchpad
     (:documentation "A Common LISP library for lauchpad.net") 
     (:use :cl :drakma :cl-ppcre :json)
-    (:export :get-token-and-login :get-all-bugs :get-a-bug :open-a-bug :update-a-bug :add-a-comment))
+    (:export :get-token-and-login :get-all-bugs :get-bug :open-bug :update-bug :add-comment))
   
